# TrafficSimulationSystem

./: CMakeLists.txt  README.md  main.cpp  trafficDensityCounter.cpp  trafficDensityCounter.hpp  trafficLight.cpp  trafficLight.hpp
